module-2/services/manifests/archive/production-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  annotations:
    moniker.spinnaker.io/application: '"myapp"'
