module-2/services/manifests/archive/backend-vs-destrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: production
spec:
  hosts:
    - backend
  http:
  - route:
    - destination:
        host: backend
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
  namespace: production
spec:
  host: backend
  subsets:
  - name: canary
    labels:
      version: canary
  - name: production
    labels:
      version: production
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
