module-2/services/manifests/archive/test-backend-vs-canary-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: production
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: canary
        port:
          number: 80
      weight: 100
