module-2/services/manifests/archive/test-disable-mtls.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "backend"
 namespace: staging
spec:
 host: "backend.staging.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
